Draggable & inline titlebar on MacOS electron app

--- a/src/main.css
+++ b/src/main.css
@@ -281,3 +281,13 @@
 .hljs-title {
   color: #f22c3d;
 }
+
+.drag {
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-app-region: drag;
+}
+
+.no-drag {
+  -webkit-app-region: no-drag;
+}
