Removed all monetag stuff and added font swap.

--- a/src/Roboto.css
+++ b/src/Roboto.css
@@ -1,11 +1,11 @@
 /* Roboto Thin */
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto Thin'),
-    url('./fonts/Roboto-Thin.woff2') format('woff2'),
+  src: local('Roboto Thin'), url('./fonts/Roboto-Thin.woff2') format('woff2'),
     url('./fonts/Roboto-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Roboto Thin Italic */
@@ -16,16 +16,17 @@
     url('./fonts/Roboto-ThinItalic.ttf') format('truetype');
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Roboto Light */
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto Light'),
-    url('./fonts/Roboto-Light.woff2') format('woff2'),
+  src: local('Roboto Light'), url('./fonts/Roboto-Light.woff2') format('woff2'),
     url('./fonts/Roboto-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Roboto Light Italic */
@@ -36,16 +37,17 @@
     url('./fonts/Roboto-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Roboto Regular */
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'),
-    url('./fonts/Roboto-Regular.woff2') format('woff2'),
+  src: local('Roboto'), url('./fonts/Roboto-Regular.woff2') format('woff2'),
     url('./fonts/Roboto-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Roboto Italic */
@@ -56,6 +58,7 @@
     url('./fonts/Roboto-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Roboto Medium */
@@ -66,6 +69,7 @@
     url('./fonts/Roboto-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Roboto Medium Italic */
@@ -76,16 +80,17 @@
     url('./fonts/Roboto-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Roboto Bold */
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto Bold'),
-    url('./fonts/Roboto-Bold.woff2') format('woff2'),
+  src: local('Roboto Bold'), url('./fonts/Roboto-Bold.woff2') format('woff2'),
     url('./fonts/Roboto-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Roboto Bold Italic */
@@ -96,16 +101,17 @@
     url('./fonts/Roboto-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Roboto Black */
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto Black'),
-    url('./fonts/Roboto-Black.woff2') format('woff2'),
+  src: local('Roboto Black'), url('./fonts/Roboto-Black.woff2') format('woff2'),
     url('./fonts/Roboto-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Roboto Black Italic */
@@ -116,4 +122,5 @@
     url('./fonts/Roboto-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
