ranking / user credits page

--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+[hidden] {
+  display: none !important;
+}
 @layer base {
   * {
     box-sizing: border-box;
