--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'RussoOne';
+  font-style: normal;
+  font-weight: normal;
+  src: local('RussoOne-Regular'), url(/RussoOne-Regular.ttf);
+}
+
 [hidden] {
   display: none !important;
 }
