--- a/src/main.css
+++ b/src/main.css
@@ -320,3 +320,14 @@
 .prose :where(strong):not(:where([class~="not-prose"] *)){
   color: white !important;
 }
+
+:root {
+	--aspect-ratio: calc(4 / 3); /* 3:1的宽高比例 */
+}
+
+.card-grid-column {
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+	grid-template-rows: repeat(auto-fill, minmax(120px, 1fr * var(--aspect-ratio)));
+}
